# frontend-study-lab

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: backend-ci.yml  bot-mention.yml  bot-scheduled.yml  ci.yml  deploy.yml
backend/: pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: catalog.py  config.py  main.py
backend/app/models/: progress.py
backend/app/routes/: auth.py  progress.py
backend/tests/: test_config.py
docs/: AGENTS.md  plan-backend.md  plan-frontend.md
frontend/: App.vue  index.html  playwright.config.ts  vitest.config.ts
frontend/api/: client.ts  index.ts
frontend/api/__tests__/: api.test.ts
frontend/assets/scss/pages/: _app.scss  _home.scss
frontend/components/layout/: AppFooter.vue  AppHeader.vue  AppSidebar.vue  TopicPage.vue
frontend/components/ui/__tests__/: UiButton.test.ts  UiProgressBar.test.ts
frontend/e2e/: auth.spec.ts  home.spec.ts  i18n.spec.ts  progress.spec.ts  topic.spec.ts
frontend/mocks/: handlers.ts
frontend/stores/__tests__/: progress.test.ts
frontend/test/: setup.ts
frontend/topics/js-core/bind/: Bind.vue
frontend/topics/js-core/curry/: Curry.vue
frontend/topics/js-core/debounce/: Debounce.vue
frontend/topics/js-core/deepEqual/: DeepEqual.vue
frontend/topics/js-core/deepclone/: Deepclone.vue
frontend/topics/js-core/memoize/: Memoize.vue
frontend/topics/js-core/throttle/: Throttle.vue
